--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "node-fetch": "^1.7.3",
     "node-twitterbot": "^0.2.2",
     "twit": "^2.2.9"
+  },
+  "engines": {
+    "node": "8.9.0"
   }
 }
